# zzatGPT

./: .gitignore  Commands.toml  LICENSE  README.md
crates/backend/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/backend/icons/: icon.icns
crates/backend/src/: main.rs
crates/frontend/: index.html  package-lock.json  package.json  tsconfig.json
crates/frontend/src/: App.tsx  index.css  store.ts
crates/frontend/src/components/: ChatInput.tsx  Conversation.tsx  Header.tsx  Markdown.tsx  Typing.tsx
crates/frontend/src/pages/: ChatPage.tsx  Settings.tsx  Welcome.tsx
crates/frontend/src/types/: AppState.ts  Message.ts  SavedData.ts
crates/frontend/src/utils/: constants.ts  getSavedValues.ts  request.ts
